Prevent line graph tooltip wrapping; revert overflow change
(The overflow change meant the tooltip position did not line up with the X axis date)

--- a/src/widget/components/graphs/line-graph/line-graph.module.scss
+++ b/src/widget/components/graphs/line-graph/line-graph.module.scss
@@ -33,6 +33,7 @@
 
 .line-graph-tooltip-name {
   padding-right: 0.5em;
+  white-space: nowrap;
 }
 
 .line-graph-tooltip-value {
